[package]
name = "desktop-spectrum"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfft = "6.4.1"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
