[package]
name = "desktop-spectrum"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
rustfft = "6.4.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    # "Win32_Graphics_Direct3D",
    # "Win32_Graphics_Direct3D_Fxc",
    # "Win32_Graphics_Direct3D12",
    # "Win32_Graphics_Dxgi",
    # "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Security",
] }
